# socket-api

./: .gitignore
src/: CMakeLists.txt  platform.h  spec.h
src/client/: ISocketClent.h  SocketClent.cpp  SocketClient.h
src/server/: ISocketServer.h  SockeServer.cpp  SocketServer.h
test/: CMakeLists.txt  test_client.cpp  test_server.cpp
